force-app/main/default/objects/Edfund_Facility_Contribution__c/Edfund_Facility_Contribution__c.object-meta.xml
<CustomObject>
    <label>Edfund Facility Contribution (CBA)</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Edfund Facility Contribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edfund Facility Contributions (CBA)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>