force-app/main/default/objects/Edfund_Facility_Contribution__c/fields/CBA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CBA_Received_Date__c</fullName>
    <label>CBA Received Date</label>
    <type>Date</type>
</CustomField>