force-app/main/default/objects/Edfund_Facility_Contribution__c/fields/Contribution_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contribution_End_Date__c</fullName>
    <label>Contribution End Date</label>
    <type>Date</type>
</CustomField>