force-app/main/default/objects/Edfund_Facility_Contribution__c/fields/Contribution_End_Date_CBA__c.field-meta.xml
<CustomField>
    <fullName>Contribution_End_Date_CBA__c</fullName>
    <label>Contribution (CBA) End Date</label>
    <type>Date</type>
</CustomField>