force-app/main/default/objects/Edfund_Facility_Contribution__c/fields/Contribution_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Rate__c</fullName>
    <label>Contribution Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.07</fullName>
            </value>
            <value>
                <fullName>0.08</fullName>
            </value>
            <value>
                <fullName>1.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>