force-app/main/default/objects/Edfund_Facility_Contribution__c/fields/Contribution_Start_Date_CBA__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Start_Date_CBA__c</fullName>
    <label>Contribution (CBA) Start Date</label>
    <type>Date</type>
</CustomField>