force-app/main/default/objects/Edfund_Facility_Contribution__c/fields/Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Type__c</fullName>
    <label>Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>