force-app/main/default/objects/Edfund_Facility_Contribution__c/fields/EdFund_Facilities__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Facilities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EdFund Facilities</label>
    <referenceTo>EdFund_Facilites__c</referenceTo>
    <relationshipName>Edfund_Facility_Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>