force-app/main/default/objects/Edfund_Facility_Contribution__c/fields/Employer_Form_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Employer_Form_Received_Date__c</fullName>
    <label>Employer Form Received Date</label>
    <type>Date</type>
</CustomField>